LinKreta_POC_Repository/force-app/main/default/objects/GM_SUB_INDURSTRIES__x/fields/SUB_INDUSTRY_DESC__c.field-meta.xml
<CustomField>
    <fullName>SUB_INDUSTRY_DESC__c</fullName>
    <description>SUB_INDUSTRY_DESC</description>
    <externalDeveloperName>SUB_INDUSTRY_DESC</externalDeveloperName>
    <label>SUB_INDUSTRY_DESC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>