LinKreta_POC_Repository/force-app/main/default/objects/GM_SUB_INDURSTRIES__x/fields/SUB_INDUSTRY_MID__c.field-meta.xml
<CustomField>
    <fullName>SUB_INDUSTRY_MID__c</fullName>
    <description>SUB_INDUSTRY_MID</description>
    <externalDeveloperName>SUB_INDUSTRY_MID</externalDeveloperName>
    <label>SUB_INDUSTRY_MID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>