LinKreta_POC_Repository/force-app/main/default/objects/GM_SUB_INDURSTRIES__x/fields/UP_USER_ID__c.field-meta.xml
<CustomField>
    <fullName>UP_USER_ID__c</fullName>
    <description>UP_USER_ID</description>
    <externalDeveloperName>UP_USER_ID</externalDeveloperName>
    <label>UP_USER_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>